<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_clothing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/blueback"
    tools:context="com.qinglenmeson.ootd.AddClothingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

        <com.qinglenmeson.ootd.ClothingAddView
            android:id="@+id/add_clothing_clothing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Take Picture"
                android:onClick="takePicture" />
        <Button
            android:id="@+id/add_clothing_add_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="2dp"
            android:text="+ Add"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
