<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/blueback"
    tools:context="com.qinglenmeson.ootd.MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_title"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_weather"
            />
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
            <ImageView
                android:id="@+id/main_weatherImage"
                android:layout_width="50dp"
                android:layout_height="50dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:id="@+id/main_dayLow"
                    />
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:textSize="25dp"
                android:id="@+id/main_dayHigh"
                />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Today's Outfit"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
                <com.qinglenmeson.ootd.RotatedButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dip"
                    android:gravity="center"
                    android:text="Clear"
                    android:onClick="clearTodaysOutfit"
                    android:layout_alignParentRight="true" />
                <com.qinglenmeson.ootd.OutfitPreviewView
                android:id="@+id/main_todaysoutfit"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <com.qinglenmeson.ootd.RotatedButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:gravity="center"
                android:text="Past Outfits"
                android:onClick="openPastOutfits"
                android:layout_alignParentRight="true" />
            <android.support.v4.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/main_OutfitList"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </android.support.v4.widget.NestedScrollView>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <com.qinglenmeson.ootd.RotatedButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:gravity="center"
                android:text="Archives"
                android:onClick="openArchives"
                android:layout_alignParentRight="true" />
            <android.support.v4.widget.NestedScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/main_ClothingList"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </android.support.v4.widget.NestedScrollView>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="+ Clothes"
            android:onClick="openAddClothing" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Generate Outfit"
            android:onClick="openGenerateOutfit" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Clear Closet"
            android:onClick="reset" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Laundry"
            android:onClick="laundry"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Change Closet"
            android:onClick="editTitle"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Zip Code"
            android:onClick="editZip"/>
        </LinearLayout>
</ScrollView>
</RelativeLayout>
