...
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name"/>
                <EditText android:id="@+id/clothingedit_EditName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="40dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionDone" />
...
