<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_zip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/blueback"
    tools:context="com.qinglenmeson.ootd.ChangeZipActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <EditText android:id="@+id/changezip_editZip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="40dp"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionDone"
            />
        <Button
            android:id="@+id/changezip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change Zip Code"
            android:onClick="changeZip"/>
    </LinearLayout>
</RelativeLayout>
