<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_generate_outfit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/blueback"
    tools:context="com.qinglenmeson.ootd.GenerateOutfitActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <Button
                android:id="@+id/generate_outfit_shuffle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginBottom="2dp"
                android:text="Shuffle"
                android:onClick="shuffle" />
            <com.qinglenmeson.ootd.OutfitGeneratedView
                android:id="@+id/generate_outfit_preview"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"></com.qinglenmeson.ootd.OutfitGeneratedView>
            <Button
                android:id="@+id/generate_outfit_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Accept"
                android:onClick="accept"
                android:visibility="gone"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
